# rsbeams

./: README.md  pyproject.toml  requirements.txt  setup.py
docs/: index.rst
examples/: plotting_elegant.ipynb  sampling.ipynb  test_sample.py
examples/notebooks/: Testing_rsbeams_decoherence.ipynb  example-NLI-construction.ipynb
examples/sdds_examples/: sdds_reader.py  sdds_writer.py
rsbeams/: __init__.py  rsbeams_console.py
rsbeams/matplotlib/: RadiaSoft RC.ipynb  RsPlotPhaseSpace6D.py  RsScatterPS6D.py  plot_ptcls.py  plot_tools.py
rsbeams/physics/: rsconst.py
rsbeams/pkcli/: lattice.py
rsbeams/ptcl_beam/: RsDistrib6D.py  RsPhaseSpace6D.py  RsPtclBeam6D.py  RsTwiss2D.py
rsbeams/rsdata/: SDDS.py  datatypes.py  struct_data.py  switchyard.py  utils.py
rsbeams/rslattice/: Beamline.py  Element.py  formatted_writer.py  lte_parser.py  nonlinear.py  trace3d_parser.py
rsbeams/rsphysics/: decoherence.py  rsconst.py
rsbeams/rsplot/: beam_plots.py  util.py
rsbeams/rsptcls/: RsDistrib6D.py  RsPhaseSpace6D.py  RsPtclBeam6D.py  RsTwiss2D.py  bunch.py  phases.py  species.py
rsbeams/rsstats/: kinematic.py  sample.py  stats6d.py
tests/: beam_gen_test.py  beam_plot_test.py  distrib_test.py  ebeam_test.py  elegant_final.fin  exit_2pages.w0  file1.sdds  file2.sdds  headers.py  import_test.py  linear_dipole_20_nopar.sig  linear_dipole_20_nopar_nostr.sig  phase_space_test.py  sphere_unif_test.py  stats_test.py  test_kinematic.py  test_lattice_importer.py  test_sdds.py  test_sdds_read.py  test_sdds_write.py  test_switchyard.py  twiss2d_test.py
(+43 files in other folders)
